<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_label">TITLE</string>
    <string name="id_label">ID</string>
    <string name="description_label">DESCRIPTION</string>
    <string name="rating_label">RATING</string>
    <string name="release_date_label">RELEASE_DATE</string>
    <string name="poster_path_label">POSTER_PATH</string>
    <string name="rating_text">Rating</string>
    <string name="title_text">Title of the Movie</string>
    <string name="release_date_text">Release Date</string>
    <string name="overview_text">Overview</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="movie_details_top_content_description">Color Space on Top of Activity</string>
    <string name="base_image_url">http://image.tmdb.org/t/p/w342</string>
    <string name="network_unavailable_error">Network Connection Unavailable</string>
    <string name="path_param_top_rated">top_rated</string>
    <string name="path_param_popular">popular</string>
    <string name="base_rest_url">https://api.themoviedb.org/3/movie</string>
    <string name="param_api_key">api_key</string>
    <string name="popular_label">Popular</string>
    <string name="top_rated_label">Top Rated</string>
    <string name="favorite_sort_label">Favorite</string>
    <string name="the_favorite_button_description">theFavoriteButton</string>
    <string name="trailer_thumbnail">trailerThumbnail</string>
    <string name="base_trailer_image_url">https://img.youtube.com/vi/</string>
    <string name="trailer_image_file_name">/0.jpg</string>
    <string name="value_trailers">videos</string>
    <string name="base_trailer_youtube_url">http://www.youtube.com/watch?v=</string>
    <string name="value_reviews">reviews</string>
    <string name="base_review_image_url">tesmp</string>
    <string name="movie_reviews_label">Movie Reviews</string>
    <string name="movie_trailers_label">Trailers</string>
    <string name="base_trailer_youtube_brower_url">vnd.youtube://</string>
    <string name="api_key">PLEASE_INSERT_YOUR_KEY_HERE</string>
</resources>
