<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.computecrib.android.popularmovies.MovieDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="146dp"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/iv_movie_original"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:tint="#BF360C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/movie_details_top_content_description" />

        <ImageView
            android:id="@+id/iv_movie_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_movie_original"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-16dp"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/movie_poster_content_description" />




        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_movie_release_date"
            android:layout_below="@+id/tv_movie_release_date"
            android:layout_marginTop="8dp"
            android:text="@string/rating_text"
            android:textColor="#000000"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_original"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_small" />

        <TextView
            android:id="@+id/tv_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_rating_label"
            android:layout_below="@+id/tv_rating_label"
            tools:text="9.2"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_original"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_label" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_movie_original"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/iv_movie_small"
            android:text="@string/title_text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_movie_name"
            android:layout_below="@+id/tv_movie_name"
            android:text="@string/release_date_text" />

        <TextView
            android:id="@+id/tv_description_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/iv_movie_small"
            android:layout_below="@+id/iv_movie_small"
            android:layout_marginTop="16dp"
            android:text="@string/overview_text"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tv_movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_description_Label"
            android:layout_below="@+id/tv_description_Label"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            tools:text="Lorem Ipsum Dolerey Mi Fasola Ti" />

        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_movie_description"
            android:layout_alignStart="@+id/iv_movie_small"
            android:layout_marginBottom="16dp"
            android:text="@string/movie_trailers_label"
            android:textColor="#000000"
            android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_trailers"
                android:orientation="horizontal"
                android:layout_below="@id/tv_trailers_label"
                android:layout_marginBottom="16dp">
            </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_trailers"
            android:layout_alignStart="@+id/iv_movie_small"
            android:layout_marginBottom="16dp"
            android:text="@string/movie_reviews_label"
            android:textColor="#000000"
            android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/iv_movie_small"
                android:id="@+id/rv_reviews"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/tv_reviews_label">
            </android.support.v7.widget.RecyclerView>




        <ImageButton
            android:id="@+id/ib_fav_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:foregroundGravity="top"
            android:tint="#000000"
            android:background="@drawable/fav_button_off"
            app:srcCompat="@android:drawable/star_off"
            android:contentDescription="@string/the_favorite_button_description"/>

    </RelativeLayout>


</ScrollView>
